--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 env: 
   REACT_APP_API_KEY: ${{variables.REACT_APP_API_KEY}}
-  REACT_APP_AUTH_DOMAIN: ${{REACT_APP_AUTH_DOMAIN}}
+  REACT_APP_AUTH_DOMAIN: ${{variables.REACT_APP_AUTH_DOMAIN}}
   REACT_APP_PROJECT_ID:  ${{variables.REACT_APP_PROJECT_ID}}
   REACT_APP_STORAGE_BUCKET: ${{variables.REACT_APP_STORAGE_BUCKET}}
   REACT_APP_MESSAGING_SENDER_ID: ${{variables.REACT_APP_MESSAGING_SENDER_ID}}
