--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,12 @@ on:
     branches: [main]
 
 env: 
-  REACT_APP_API_KEY: ${{variables.REACT_APP_API_KEY}}
-  REACT_APP_AUTH_DOMAIN: ${{variables.REACT_APP_AUTH_DOMAIN}}
-  REACT_APP_PROJECT_ID:  ${{variables.REACT_APP_PROJECT_ID}}
-  REACT_APP_STORAGE_BUCKET: ${{variables.REACT_APP_STORAGE_BUCKET}}
-  REACT_APP_MESSAGING_SENDER_ID: ${{variables.REACT_APP_MESSAGING_SENDER_ID}}
-  REACT_APP_APP_ID: ${{variables.REACT_APP_APP_ID}}
+  REACT_APP_API_KEY: ${{secrets.IDKEY}}
+  REACT_APP_AUTH_DOMAIN: ${{secrets.DOMAIN}}
+  REACT_APP_PROJECT_ID:  ${{secrets.ID}}
+  REACT_APP_STORAGE_BUCKET: ${{secrets.BUCKET}}
+  REACT_APP_MESSAGING_SENDER_ID: ${{secrets.SENDER_ID}}
+  REACT_APP_APP_ID: ${{secrets.APP_ID}}
 
 jobs:
   build-and-deploy:
